--- a/builder/requirements.txt
+++ b/builder/requirements.txt
@@ -3,10 +3,12 @@ pandas
 pyarrow
 runpod~=1.7.7
 huggingface-hub
+transformers
+peft
+bitsandbytes>=0.45.0
+accelerate
 packaging
 typing-extensions>=4.8.0
 pydantic
 pydantic-settings
 hf-transfer
-transformers
-bitsandbytes>=0.45.0
